--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
       HTML Language Homework, headstart?
     </title>
       <body>
-        
+        <header>
+          <h1 id = "title">Cosmos</h1>
+          <h2 id = "sub_heading">Hearts of the stars Euclid</h2>
+            <nav>
+              <ul id = "main_nav">
+                <li class = "active nav_item"><a href = "#">Globular</a></li>
+                <li class = "nav_item"><a href = "#">Star Cluster</a></li>
+                <li class = "nav_item"><a href = "#">Hydrogen Atoms</a></li>
+                <li id = "sub_nav">
+                  <ul>Star Stuff</ul>
+                    <li class = "nav_item"><a href = "#">Apollonius</a></li>
+                    <li class = "nav_item"><a href = "#">Perga</a></li>
+                </li>
+              </ul>
+            </nav>
+        </header>
       </body>
   </head>
 </html>  
