--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
           </section>
           <aside id  = "side_content">
             <h4 class = "side_titel">Corpus Callosum</h4>
-              <p>"Another world tingling of the spine, preserve and cherish that pale blue dot a billion trillion quasar a billion trillion preserve and cherish that pale blue dot, shores of the cosmic ocean radio telescope. Inconspicuous motes of rock and gas. Hypatia realm of the galaxies Tunguska event!"</p>
+              <p>Another world tingling of the spine, preserve and cherish that pale blue dot a billion trillion quasar a billion trillion preserve and cherish that pale blue dot, shores of the cosmic ocean radio telescope. Inconspicuous motes of rock and gas. Hypatia realm of the galaxies Tunguska event!</p>
           </aside>
+          <footer>
+            <span>
+               Carl Sagan ©2024 saganipsum.com
+            </span>
+          </footer>
       </body>
   </head>
 </html>  
