ok final final commit, fixed the sub_nav li with uls within them on lines 14-19

--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
                 <li class = "active nav_item"><a href = "#">Globular</a></li>
                 <li class = "nav_item"><a href = "#">Star Cluster</a></li>
                 <li class = "nav_item"><a href = "#">Hydrogen Atoms</a></li>
-                <li id = "sub_nav">
-                  <ul>Star Stuff</ul>
-                    <li class = "nav_item"><a href = "#">Apollonius</a></li>
-                    <li class = "nav_item"><a href = "#">Perga</a></li>
-                </li>
+                <li id = "sub_nav"><a href = "#">Star Stuff
+                    <ul class = "nav_item"><a href = "#">Apollonius</a></ul>
+                    <ul class = "nav_item"><a href = "#">Perga</a></ul>
+                </a></li>
               </ul>
             </nav>
         </header>
