added comments denoting where ids and classes end on lines 12-20 for readability

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li id = "sub_nav"><a href = "#">Star Stuff
                     <ul class = "nav_item"><a href = "#">Apollonius</a></ul>
                     <ul class = "nav_item"><a href = "#">Perga</a></ul>
-                </a></li>
-              </ul>
+                </a></li><!-- #subnav -->
+              </ul><!-- #main_nav -->
             </nav>
         </header>
           <section id = "main_content">
