fixed the copyright symbol at the bottom with&What

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </aside>
           <footer>
             <span>
-               Carl Sagan ©2024 saganipsum.com
+               Carl Sagan &copy2024 saganipsum.com
             </span>
           </footer>
       </body>
