--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
   <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
     <title>
       HTML Language Homework, headstart?
     </title>
@@ -13,9 +14,10 @@
                 <li class = "active nav_item"><a href = "#">Globular</a></li>
                 <li class = "nav_item"><a href = "#">Star Cluster</a></li>
                 <li class = "nav_item"><a href = "#">Hydrogen Atoms</a></li>
-                <li id = "sub_nav"><a href = "#">Star Stuff
-                    <ul class = "nav_item"><a href = "#">Apollonius</a></ul>
-                    <ul class = "nav_item"><a href = "#">Perga</a></ul>
+                <li id = "sub_nav"><a href = "#">Star Stuff</a></li>
+                    <ul class = "nav_item">
+                    <li class = "nav_item"><a href = "#">Apollonius</a></li>
+                    <li class = "nav_item"><a href = "#">Perga</a></li>
                 </a></li><!-- #subnav -->
               </ul><!-- #main_nav -->
             </nav>
@@ -27,7 +29,7 @@
             <p>Birth. Cosmic fugue! Cosmic ocean colonies? At the edge of forever made in the interiors of collapsing stars Jean-François Champollion of brilliant syntheses extraordinary claims require extraordinary evidence bits of moving fluff consciousness Tunguska event, the sky calls to us extraplanetary. At the edge of forever circumnavigated Drake Equation, the carbon in our apple pies not a sunrise but a galaxyrise, cosmic fugue, billions upon billions birth hundreds of thousands billions upon billions! Globular star cluster colonies, galaxies vastness is bearable only through love a mote of dust suspended in a sunbeam, Hypatia kindling the energy hidden in matter Cambrian explosion another world. Dream of the mind's eye vanquish the impossible encyclopaedia galactica.</p>
           </section>
           <aside id  = "side_content">
-            <h4 class = "side_titel">Corpus Callosum</h4>
+            <h4 class = "side_title">Corpus Callosum</h4>
               <p>Another world tingling of the spine, preserve and cherish that pale blue dot a billion trillion quasar a billion trillion preserve and cherish that pale blue dot, shores of the cosmic ocean radio telescope. Inconspicuous motes of rock and gas. Hypatia realm of the galaxies Tunguska event!</p>
           </aside>
           <footer>
@@ -37,4 +39,4 @@
           </footer>
       </body>
   </head>
-</html>  
+</html>
