making new branch

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li class = "nav_item"><a href = "#">Hydrogen Atoms</a></li>
                 <li id = "sub_nav"><a href = "#">Star Stuff</a></li>
                     <ul class = "nav_item">
-                    <li class = "nav_item"><a href = "#">Apollonius</a></li>
-                    <li class = "nav_item"><a href = "#">Perga</a></li>
+                    <li class = "nav_item hide"><a href = "#">Apollonius</a></li>
+                    <li class = "nav_item hide"><a href = "#">Perga</a></li>
                 </a></li><!-- #subnav -->
               </ul><!-- #main_nav -->
             </nav>
